--- a/scripts/markedHeader.html
+++ b/scripts/markedHeader.html
@@ -11,10 +11,35 @@
       margin: 40px;
     }
     h1, h2, h3 {
-      font-family: Roboto, Arial, 'Helvetica Neue', sans-serif;
+      font-family: 'Roboto Slab', Roboto, Arial, 'Helvetica Neue', sans-serif;
+      color: #263238;
+      scroll-margin-top: 90px;
+      margin-top: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    h1 {
+      font-size: 2.4rem;
+      font-weight: 700;
+      letter-spacing: -0.01em;
+      position: relative;
+      padding-bottom: 1.1rem;
+    }
+    h2 {
+      font-size: 1.8rem;
+      font-weight: 600;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 0.35rem;
+      color: #41535b;
+    }
+    h3 {
+      font-size: 1.10rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.06em;
+      color: #455a64;
     }
     pre {
-      background: #cfd1d4;
+      background: #e4e7ec;
       color: #000000;
       padding: 10px 56px 10px 10px;
       border-radius: 0.5rem;
