--- a/scripts/markedHeader.html
+++ b/scripts/markedHeader.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Matterbridge</title>
-  <link rel="icon" type="image/svg+xml" href="https://matterbridge.io/matterbridge.svg">
+  <link rel="icon" type="image/svg+xml" href="https://matterbridge.io/assets/matterbridge.svg">
   <style>
     body {
       font-family: Roboto, Arial, 'Helvetica Neue', sans-serif;
